updated html and sass

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
           <div class="logo">LOGO!</div>
           <!--TODO: Fix location of logo-->
           <ul class="clean-list">
-            <li>&#x2630;</li>
+            <li class="hamburger">&#x2630;</li>
           </ul>
           <div class="main-nav-items flex justify-center">
-            <ul class="clean-list flex">
+            <ul class="clean-list flex align-center">
               <li><a href="#main-display">Portfolio</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#"></a>Placeholder Arrow</li>
-              <li><a href="#"></a>Blog</li>
-              <li><a href="#"></a>Get in Touch!</li>
+              <li><a href="#"><img src="/assets/imgs/arrow.png"></a></li>
+              <li><a href="#">Blog</a> </li>
+              <li><a href="#">Get in Touch!</a> </li>
             </ul>
           </div>
         </div>
@@ -37,12 +37,33 @@
       </div>
       <div class="responsive-gallery flex">
         <div class="tags-display"></div>
-        <div class="img-display"></div>
+        <div class="img-display">
+          <ul class="thumbnails clean-list flex flex-wrap">
+            <li class="flex"><img>
+              <p> </p>
+            </li>
+            <li class="flex"><img>
+              <p> </p>
+            </li>
+            <li class="flex"><img>
+              <p> </p>
+            </li>
+            <li class="flex"><img>
+              <p> </p>
+            </li>
+            <li class="flex"><img>
+              <p> </p>
+            </li>
+            <li class="flex"><img>
+              <p> </p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
-    <section class="about"></section>
-    <section class="contact"></section>
+    <section class="about">ABOUT!</section>
+    <section class="contact">CONTACT!</section>
 
   </main>
 
