--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <button class="search-button">&#x1f50d;</button>
       </div>
       <div class="responsive-gallery flex">
-        <div class="tags-display"></div>
-        <div class="img-display">
+        <div class="tags-display">Tag Search</div>
+        <div class="img-display"> Gallery
           <ul class="thumbnails clean-list flex flex-wrap">
             <li class="flex"><img>
               <p> </p>
