--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="dist/style.css">
 </head>
 
-<body>
+<body onload="initApp()">
   <main class="container">
     <header>
       <nav class="navbar">
@@ -66,7 +66,7 @@
     <section class="contact">CONTACT!</section>
 
   </main>
-
+  <script src="js/gallery.js"></script>
   <script src="js/editor.js"></script>
   <script src="js/main.js"></script>
 </body>
