--- a/index.html
+++ b/index.html
@@ -39,28 +39,36 @@
         <div class="tags-display">Tag Search</div>
         <div class="img-display"> Gallery
           <ul class="thumbnails clean-list flex flex-wrap">
-            <li class="flex"><img>
+            <li class="flex">
+              <img>
               <p> </p>
             </li>
-            <li class="flex"><img>
+            <li class="flex">
+              <img>
               <p> </p>
             </li>
-            <li class="flex"><img>
+            <li class="flex">
+              <img>
               <p> </p>
             </li>
-            <li class="flex"><img>
+            <li class="flex">
+              <img>
               <p> </p>
             </li>
-            <li class="flex"><img>
+            <li class="flex">
+              <img>
               <p> </p>
             </li>
-            <li class="flex"><img>
+            <li class="flex">
+              <img>
               <p> </p>
             </li>
           </ul>
         </div>
       </div>
     </section>
+
+    
 
     <section class="about">ABOUT!</section>
     <section class="contact">CONTACT!</section>
