--- a/index.html
+++ b/index.html
@@ -39,28 +39,22 @@
         <div class="tags-display">Tag Search</div>
         <div class="img-display"> Gallery
           <ul class="thumbnails clean-list flex flex-wrap">
-            <li class="flex">
-              <img>
+            <li class="flex"><img>
               <p> </p>
             </li>
-            <li class="flex">
-              <img>
+            <li class="flex"><img>
               <p> </p>
             </li>
-            <li class="flex">
-              <img>
+            <li class="flex"><img>
               <p> </p>
             </li>
-            <li class="flex">
-              <img>
+            <li class="flex"><img>
               <p> </p>
             </li>
-            <li class="flex">
-              <img>
+            <li class="flex"><img>
               <p> </p>
             </li>
-            <li class="flex">
-              <img>
+            <li class="flex"><img>
               <p> </p>
             </li>
           </ul>
@@ -68,7 +62,12 @@
       </div>
     </section>
 
-    
+    <section class="meme-editor">
+      <div>
+      <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+      </div>
+      <div class="meme-toolbox"></div>
+    </section>
 
     <section class="about">ABOUT!</section>
     <section class="contact">CONTACT!</section>
