--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Meme Generator</title>
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="dist/style.css">
 </head>
 
@@ -15,7 +16,7 @@
           <div class="logo">LOGO!</div>
           <!--TODO: Fix location of logo-->
           <ul class="clean-list">
-            <li class="hamburger">&#x2630;</li>
+            <li class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></li>
           </ul>
           <div class="main-nav-items flex justify-center">
             <ul class="clean-list flex align-center">
@@ -64,7 +65,7 @@
 
     <section class="meme-editor">
       <div>
-      <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+        <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
       </div>
       <div class="meme-toolbox"></div>
     </section>
