--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Meme Generator</title>
-  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="dist/style.css">
 </head>
 
@@ -34,7 +34,7 @@
     <section class="gallery">
       <div class="search-box flex">
         <input type="text" class="search-input flex-1" name="search-input" placeholder="Enter Keyword">
-        <button class="search-button">&#x1f50d;</button>
+        <button class="search-button"><i class="fa fa-search" aria-hidden="true"></i></button>
       </div>
       <div class="responsive-gallery flex">
         <div class="tags-display">Tag Search</div>
