--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <section class="meme-editor">
       <div>
-        <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+        <canvas class="meme-canvas flex" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
       </div>
       <div class="meme-toolbox"></div>
     </section>
