render text on canvas

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <section class="contact">CONTACT!</section>
 
   </main>
+  <script src="js/canvas.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/editor.js"></script>
   <script src="js/main.js"></script>
