--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
 
     <section class="meme-editor">
       <div>
-        <canvas class="meme-canvas flex" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+        <div>
+          <canvas class="meme-canvas flex" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+        </div>
+        <div>
+          <canvas class="txt-canvas flex" id="txtCanvas">Update Your Browser To Enjoy Canvas</canvas>
+        </div>
       </div>
       <div class="meme-toolbox"></div>
     </section>
