canvas on top of eachother!

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       </div>
     </section>
 
-    <section class="meme-editor">
-      <div>
-        <div>
-          <canvas class="meme-canvas flex" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+    <section class="meme-editor flex">
+      <div class="canvas-box flex">
+        <div class="meme-canvas-div">
+          <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
         </div>
-        <div>
-          <canvas class="txt-canvas flex" id="txtCanvas">Update Your Browser To Enjoy Canvas</canvas>
+        <div class="txt-canvas-div">
+          <canvas class="txt-canvas" id="txtCanvas">Update Your Browser To Enjoy Canvas</canvas>
         </div>
       </div>
       <div class="meme-toolbox"></div>
