search base functionality works plus minor changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="gallery">
       <div class="search-box flex">
         <input type="text" class="search-input flex-1" name="search-input" placeholder="Enter Keyword">
-        <button class="search-button"><i class="fa fa-search"></i></button>
+        <button class="search-button" onclick="searchBttnClicked()"><i class="fa fa-search"></i></button>
       </div>
       <div class="responsive-gallery flex">
         <div class="tags-display">Tag Search</div>
