--- a/index.html
+++ b/index.html
@@ -63,16 +63,20 @@
       </div>
     </section>
 
-    <section class="meme-editor flex">
-      <div class="canvas-box flex">
+    <section class="meme-editor flex" style="border: 1px solid red">
+
+      <!-- CANVAS AREA-->
+      <div class="canvas-box flex" style="border: 1px solid blue">
         <div class="meme-canvas-div">
           <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
         </div>
-        <div class="txt-canvas-div">
+        <div class="txt-canvas-div flex">
           <canvas class="txt-canvas" id="txtCanvas">Update Your Browser To Enjoy Canvas</canvas>
         </div>
       </div>
-      <div class="meme-toolbox"></div>
+
+      <!-- EDITOR TOOL BOX-->
+      <div class="meme-toolbox flex justify-center" style="border: 1px solid green"></div>
     </section>
 
     <section class="about">ABOUT!</section>
