made some stuff

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </section>
 
-    <section class="meme-editor flex" style="border: 1px solid red">
+    <section class="meme-editor flex flex-col" style="border: 1px solid red">
 
       <!-- CANVAS AREA-->
       <div class="canvas-box flex" style="border: 1px solid blue">
