--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
       </div>
     </section>
 
-    <section class="meme-editor flex flex-col" style="border: 1px solid red">
+    <section class="meme-editor flex flex-col justify-center" style="border: 1px solid red">
 
       <!-- CANVAS AREA-->
-      <div class="canvas-box flex" style="border: 1px solid blue">
+      <div class="canvas-box flex justify-center" style="border: 1px solid blue">
         <div class="meme-canvas-div">
           <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
         </div>
-        <div class="txt-canvas-div flex">
+        <div class="txt-canvas-div flex justify-center">
           <canvas class="txt-canvas" id="txtCanvas">Update Your Browser To Enjoy Canvas</canvas>
         </div>
       </div>
