--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
     <section class="gallery">
       <div class="search-box flex">
-        <input type="text" class="search-input flex-1" name="search-input" placeholder="Enter Keyword">
-        <button class="search-button" onclick="searchBttnClicked()"><i class="fa fa-search"></i></button>
+        <input type="text" class="search-input flex-1" onkeyup="searchActivated()" name="search-input" placeholder="Enter Keyword">
       </div>
       <div class="responsive-gallery flex">
         <div class="tags-display">Tag Search</div>
