some about changes... got tired

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="responsive-gallery flex">
         <div class="tags-display">Tag Search</div>
         <div class="img-display"> Gallery
-          <ul class="thumbnails clean-list flex flex-wrap">
+          <ul class="thumbnails clean-list flex flex-wrap align-center">
             <li class="flex"><img>
               <p> </p>
             </li>
@@ -75,7 +75,18 @@
       <div class="meme-toolbox flex justify-center" style="border: 1px solid green"></div>
     </section>
 
-    <section class="about">ABOUT!</section>
+    <section class="about flex flex-col align-center">
+      <div class="profile-picture"> <img src=""> </div>
+      <div class="profile-description flex flex-col align-center">
+        <h1>Avital</h1>
+        <h3>Aspiring Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam accusantium repellat soluta dignissimos mollitia error voluptates fuga, ex ratione fugit non deserunt, amet quas ipsum dolore magni itaque repudiandae distinctio.</p> </div>
+      <div class="profile-picture"> <img src="assets/imgs/profileImgs/erez.jpg"> </div>
+      <div class="profile-description flex flex-col align-center">
+        <h1>Erez Vishnia</h1>
+        <h3>Aspiring Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam accusantium repellat soluta dignissimos mollitia error voluptates fuga, ex ratione fugit non deserunt, amet quas ipsum dolore magni itaque repudiandae distinctio.</p> </div>
+    </section>
     <section class="contact">CONTACT!</section>
 
   </main>
