--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     <section class="contact">CONTACT!</section>
 
   </main>
+  <!--<script src="js/utils.js"></script>-->
+  <script src="node_modules/underscore/underscore-min.js"></script>
   <script src="js/canvas.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/editor.js"></script>
