ui editor & canvas

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
       </div>
     </section>
 
-    <section class="meme-editor flex flex-col justify-center" style="border: 1px solid red">
+    <section class="meme-editor flex flex-col justify-center">
 
       <!-- CANVAS AREA-->
-      <div class="canvas-box flex justify-center" style="border: 1px solid blue">
+      <div class="canvas-box flex justify-center">
         <div class="meme-canvas-div">
-          <canvas class="meme-canvas" id="memeCanvas">Update Your Browser To Enjoy Canvas</canvas>
+          <canvas class="meme-canvas" id="memeCanvas" width="320" height="215">Update Your Browser To Enjoy Canvas</canvas>
         </div>
       </div>
 
       <!-- EDITOR TOOL BOX-->
-      <div class="meme-toolbox flex justify-center" style="border: 1px solid green"></div>
+      <div class="meme-toolbox flex justify-center"></div>
     </section>
 
     <section class="about flex flex-col align-center">
