--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <nav class="navbar">
         <div class="nav-container flex justify-center">
           <div class="main-nav-items flex justify-center">
-            <ul class="clean-list flex-col align-center">
-              <li class="flex justify-center"> <a href="#"><img onclick="navArrowClicked()" src="/assets/imgs/arrow.png"></a> </li>
+            <ul class="clean-list flex-col justify-center">
+              <li class="flex justify-center hamburger-arrow"> <a href="#"><img onclick="navArrowClicked()" src="/assets/imgs/arrow.png"></a> </li>
               <li class="flex justify-center drop-down unseen"><a href="#main-display">Portfolio</a></li>
               <li class="flex justify-center drop-down unseen"><a href="#about">About</a></li>
               <li class="flex justify-center drop-down unseen"><a href="#">Blog</a> </li>
