--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- CANVAS AREA-->
       <div class="canvas-box flex justify-center">
         <div class="meme-canvas-div">
-          <canvas class="meme-canvas" id="memeCanvas" width="320" height="215">Update Your Browser To Enjoy Canvas</canvas>
+          <canvas class="meme-canvas" id="memeCanvas" dir="ltr" width="320" height="215">Update Your Browser To Enjoy Canvas</canvas>
         </div>
       </div>
 
