--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
       <div class="profile-description flex flex-col align-center">
         <h1>Erez Vishnia</h1>
         <h3>Aspiring Web Developer</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam accusantium repellat soluta dignissimos mollitia
-            error voluptates fuga, ex ratione fugit non deserunt, amet quas ipsum dolore magni itaque repudiandae distinctio.</p>
+          <p>A resident of Tzoran, Erez enjoys the quiet life with his family and friends. Formerly 
+             an economist working in large project, he is now in the process of transforming into
+             a Web Developer. In his spare time he practices martial arts, specifically Karate</p>
       </div>
     </section>
     <section class="contact">CONTACT!</section>
