--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </ul>
           </div>
         </div>
+          <div class="loadmore"><button>Load More!</button></div>
       </section>
 
       <section class="meme-editor flex flex-col justify-center outside">
