--- a/index.html
+++ b/index.html
@@ -92,7 +92,39 @@
             error voluptates fuga, ex ratione fugit non deserunt, amet quas ipsum dolore magni itaque repudiandae distinctio.</p>
       </div>
     </section>
-    <section class="contact">CONTACT!</section>
+
+    <!--  CONTACT SECTION-->
+    <section class="contact">
+      <div class="contact" id="contact">
+        <div class="contact-container flex flex-col">
+        <!--  CONTACT FORM -->
+            <form class="contct-form flex flex-col">
+                <h2>Get in touch</h2>
+                <div class="sub-title">In order to get in touch use the contact form below</div>
+                <input type="text" name="name" placeholder="Name (Required)" required/>
+                <input type="email" name="Email" placeholder="Email (Required)" required/>
+                <input type="subject" name="subject" placeholder="Subject" />
+                <textarea name=massage rows="4" cols="50" placeholder="Write your message here" required></textarea>
+                <button type="submit" class="contct-sbmt-btn align-end">Send</button>
+            </form>
+
+            <div class="contct-info flex flex-col">
+                <div class="contct-info-desc">
+                   Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero.
+                    Nulla sed nunc et tortor luctus faucibus morbi vitae.
+                </div>
+                <div class="contct-info-details">
+                    <a href="http://maps.google.com/?q=Elm St. 14/05 Lost City"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp Elm St. 14/05 Lost City</a>
+                    <a href="tel: +35283318635"> <i class="fa fa-phone" aria-hidden="true"> </i>&nbsp + 3528 331 86 35</a>
+                    <a href="mailto:info@hexalcorp.com"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp info@hexalcorp.com</a>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    </section>
 
   </main>
   <!--<script src="js/utils.js"></script>-->
