load more is working!

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
             </ul>
           </div>
         </div>
-          <div class="loadmore"><button>Load More!</button></div>
+          <div class="editor-buttons">
+            <button class="load-more" onclick="loadBtnClicked()">Load More!</button>
+            <button class="save-meme" onclick="saveBtnClicked()">Save Meme!</button>
+            </div>
       </section>
 
       <section class="meme-editor flex flex-col justify-center outside">
