--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </ul>
           </div>
         </div>
-          <div class="editor-buttons">
+          <div class="gallery-buttons">
             <button class="load-more" onclick="loadBtnClicked()">Load More!</button>
             <button class="save-meme" onclick="saveBtnClicked()">Save Meme!</button>
             </div>
