--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <input type="email" name="Email" placeholder="Email (Required)" required/>
             <input type="subject" name="subject" placeholder="Subject" />
             <textarea name=massage rows="4" cols="50" placeholder="Write your message here" required></textarea>
-            <button type="submit" class="contct-sbmt-btn align-end">Send</button>
+            <button type="submit" class="contact-submit-button align-end">Send</button>
           </form>
 
           <div class="contct-info flex flex-col">
